methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:8: error: Invalid literal number
    for (l<-1to nbPas){
            ^MethodsArgs:8: error: illegal start of simple expression
    for (l<-1to nbPas){
            ^MethodsArgs:11: error: ')' expected but '}' found.
  }
  ^