methods.args.MethodsArgs.scala.code
def move(nbPas:Int,versLAvant:Boolean){
  if (versLAvant){ 
     for(i <-1 to nbPas){
    avance()
     }
  }else{
    for (l<-1to nbPas){
      recule()
     }
  }
  
} 
  
  